WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308120
Exiting PiP to full screen to inline causes the video to disappear on iOS
https://bugs.webkit.org/show_bug.cgi?id=308120
Summary
Exiting PiP to full screen to inline causes the video to disappear on iOS
phinehas133
Reported
2026-02-18 02:16:51 PST
see title
Attachments
Add attachment
proposed patch, testcase, etc.
phinehas133
Comment 1
2026-02-18 02:16:53 PST
<
rdar://problem/162446382
>
phinehas133
Comment 2
2026-02-18 02:25:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58915
EWS
Comment 3
2026-02-18 19:37:13 PST
Committed
307804@main
(8cc28c5ae7b6): <
https://commits.webkit.org/307804@main
> Reviewed commits have been landed. Closing PR #58915 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug